--- a/src/experience/ExperienceCard.css
+++ b/src/experience/ExperienceCard.css
@@ -100,8 +100,9 @@
   .experience-card {
     width: 100%;
     max-width: 100%;
-    border-radius: 0px;
+    border-radius: 0;
     padding: 30px 25px;
+    box-sizing: border-box; /* Ensure padding is included in the width calculation */
   }
 
   .company-logo {
@@ -117,6 +118,7 @@
 
   .experience-card-header h3 {
     font-size: 20px;
+    word-wrap: break-word; /* Ensure long text wraps properly */
   }
 
   .experience-card-header p {
@@ -129,16 +131,27 @@
 
   .experience-card-body {
     font-size: 14px;
+    word-wrap: break-word; /* Ensure long text wraps properly */
   }
 
   .visit-website-button {
     padding: 6px 10px;
-    font-size: 14px; 
+    font-size: 14px;
   }
 
   .visit-website-button svg {
     width: 14px;
     height: 14px;
   }
+}
 
+.experience-card-body ul {
+  list-style-type: disc;
+  padding-left: 20px;
+  overflow-wrap: break-word; /* Ensure long text wraps properly */
+}
+
+.experience-card-body li {
+  margin-bottom: 10px;
+  overflow-wrap: break-word; /* Ensure long text wraps properly */
 }
